# SDL_Learn

./: CMakeLists.txt  README.md
01sdl_learn/: CMakeLists.txt  test.cpp
02sdl_learn/: CMakeLists.txt  test.cpp
03sdl_learn/: CMakeLists.txt  test.cpp
04sdl_learn/: CMakeLists.txt  test.cpp
05sdl_learn/: CMakeLists.txt  test.cpp
06sdl_learn/: CMakeLists.txt  test.cpp
07sdl_learn/: CMakeLists.txt  Window.cpp  Window.h  test.cpp
08sdl_learn/: CMakeLists.txt  Timer.cpp  Timer.h  Window.cpp  Window.h  test.cpp
09sdl_learn/: CMakeLists.txt  test.cpp
10sdl_learn/: CMakeLists.txt  Window.cpp  test.cpp
11sdl_learn/: CMakeLists.txt
12sdl_learn/: CMakeLists.txt  test.cpp
13sdl_learn/: CMakeLists.txt  Window.cpp  Window.h  test.cpp  test2.cpp
14sdl_learn/: CMakeLists.txt  test.cpp  test2.cpp
include/: res_path.h
tmp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sdl_learn.sln
tmp/01sdl_learn/: 01sdl_learn.sln  01sdl_learn.vcxproj  01sdl_learn.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake
tmp/02sdl_learn/: 02sdl_learn.sln  02sdl_learn.vcxproj  02sdl_learn.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake
tmp/02sdl_learn/02sdl_learn.dir/Debug/02sdl_learn.tlog/: CL.command.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tmp/02sdl_learn/02sdl_learn.dir/Release/02sdl_learn.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tmp/03sdl_learn/: 03sdl_learn.sln  03sdl_learn.vcxproj  03sdl_learn.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake
tmp/03sdl_learn/03sdl_learn.dir/Debug/03sdl_learn.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tmp/03sdl_learn/03sdl_learn.dir/Release/03sdl_learn.tlog/: 03sdl_learn.lastbuildstate  CL.command.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tmp/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
tmp/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.read.1.tlog  custombuild.write.1.tlog
tmp/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog
